CRUD Fatura e Fatura ordem serviço

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -11,3 +11,7 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+
+{% block css %}
+    {% foundation_css 'foundation-icons' %}
+{% endblock css %}
