--- a/templates/adminlte/lib/_main_sidebar.html
+++ b/templates/adminlte/lib/_main_sidebar.html
@@ -4,7 +4,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
      <!-- Brand Logo -->
      <a href="/" class="brand-link">
-        <img src="{%static 'admin-lte/dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+        <img src="{%static 'admin-lte/dist/img/logo.png' %}" alt="AdminLTE Logo" class="brand-image">
         <span class="brand-text font-weight-light">LabNecyViera</span>
       </a>
 
