--- a/templates/adminlte/lib/_main_sidebar.html
+++ b/templates/adminlte/lib/_main_sidebar.html
@@ -1,7 +1,7 @@
 {% load adminlte_helpers %}
 {%load static %}
 <!-- Left side column. contains the sidebar -->
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
+<aside class="main-sidebar sidebar-light-primary elevation-4 ">
      <!-- Brand Logo -->
      <a href="/" class="brand-link">
         <img src="{%static 'admin-lte/dist/img/logo.png' %}" alt="AdminLTE Logo" class="brand-image">
@@ -9,14 +9,13 @@
       </a>
 
     <!-- sidebar: style can be found in sidebar.less -->
-    <div class="sidebar">
+    <div class="sidebar-light-primary">
     
         <!-- sidebar menu: : style can be found in sidebar.less -->
         {% block nav_links_ul %}
         <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+            <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview" role="menu" data-accordion="false">
             {% block nav_links_outer %}
-            <li class="nav-header">{% block nav_heading %}Navegação{% endblock %}</li>
             {% block nav_links %}
             {% endblock nav_links %}
             {% endblock nav_links_outer %}
