Alteração de layout

--- a/templates/adminlte/lib/_main_sidebar.html
+++ b/templates/adminlte/lib/_main_sidebar.html
@@ -5,7 +5,9 @@
      <!-- Brand Logo -->
      <a href="/" class="brand-link">
         <img src="{%static 'admin-lte/dist/img/logo.png' %}" alt="AdminLTE Logo" class="brand-image">
-        <span class="brand-text font-weight-light">LabNecyViera</span>
+        <span style="font-size: 2ch;font-family: sans-serif;">Necy Viera</span><br>
+        <span style="font-size: 0.9ch;color: #29bcac;">Laboratório de Prótese Odontológico</span>
+        
       </a>
 
     <!-- sidebar: style can be found in sidebar.less -->
