--- a/templates/adminlte/base.html
+++ b/templates/adminlte/base.html
@@ -35,6 +35,7 @@
         {% block content_wrapper %}
         <div class="content-wrapper">
             {% block content_header %}
+            
                 <section class="content-header">
                     {% block no_heading %}
                         <h1>
@@ -58,9 +59,10 @@
                 {% block messages %}
                     {% include 'adminlte/lib/_messages.html' %}
                 {% endblock %}
-
-                {% block content_block_wrap %}
-                    {% block content %}{% endblock %}
+                
+                {% block content_block_wrap %}    
+                    {% block content %}                    
+                    {% endblock %}
                 {% endblock %}
             </section>
             {% endblock %}
