--- a/templates/adminlte/lib/_main_header.html
+++ b/templates/adminlte/lib/_main_header.html
@@ -11,7 +11,7 @@
             <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-            <a href="/admin" class="nav-link">Home</a>
+            <a href="/admin/auth/" class="nav-link">Autorização</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
             <a href="/admin/dashboard/" class="nav-link">Dashboard</a>
